package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
  name = "opentelemetry-honeycomb-exporter-js",
  module_name = '@honeycombio/opentelemetry-exporter',
  module_root = "src/index.d.ts",
  srcs = glob(["src/*.ts"]),
  deps = [
    "//third_party/opentelemetry-js:api",
    "//third_party/opentelemetry-js:core-shared",
    "//third_party/opentelemetry-js:tracing",
    "//third_party/libhoney-js",
  ]
)
